--- a/index.html
+++ b/index.html
@@ -4,38 +4,43 @@
 <meta charset="UTF-8">
 <title>RAN Teknoloji</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 
 <style>
-*{box-sizing:border-box;margin:0;padding:0}
+*{margin:0;padding:0;box-sizing:border-box}
+
 body{
   font-family:'Inter',sans-serif;
   background:#020617;
-  color:#fff;
+  color:#ffffff;
 }
+
+/* HEADER */
 header{
   position:fixed;
   top:0;left:0;right:0;
-  padding:25px 50px;
+  padding:20px 50px;
   display:flex;
   justify-content:space-between;
   align-items:center;
-  background:rgba(2,6,23,.85);
-  backdrop-filter:blur(10px);
+  background:#020617;
+  border-bottom:1px solid rgba(255,255,255,.08);
   z-index:100;
 }
-header strong{color:#3ea6ff}
+header strong{color:#38bdf8;font-size:18px}
 nav a{
   margin-left:25px;
-  color:#fff;
+  color:#ffffff;
   text-decoration:none;
   font-size:15px;
 }
-nav a:hover{color:#3ea6ff}
+nav a:hover{color:#38bdf8}
 
+/* SECTIONS */
 section{
   min-height:100vh;
-  padding:120px 60px;
+  padding:140px 60px;
   display:flex;
   align-items:center;
 }
@@ -47,75 +52,41 @@ section{
 
 /* HERO */
 .hero{
-  background:radial-gradient(circle at top,#0b1c4d,#020617);
+  background:linear-gradient(135deg,#020617,#0b1d4a);
 }
 .hero h1{
-  font-size:56px;
-  line-height:1.2;
-  margin-bottom:25px;
+  font-size:54px;
+  margin-bottom:20px;
 }
 .hero p{
-  max-width:700px;
-  font-size:19px;
+  font-size:18px;
   color:#cbd5f5;
+  max-width:700px;
 }
 
-/* KURUMSAL */
-.kurumsal{
-  background:#020b2a;
-}
-.kurumsal h2{font-size:42px;margin-bottom:20px}
-.kurumsal p{color:#cbd5f5;font-size:18px;line-height:1.7}
-
-/* FAALİYET */
-.faaliyet{
-  background:#020617;
-}
+/* CARDS */
 .cards{
-  margin-top:40px;
+  margin-top:60px;
   display:grid;
   grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
   gap:30px;
 }
 .card{
-  background:rgba(255,255,255,.05);
-  padding:30px;
+  background:rgba(255,255,255,.04);
+  border:1px solid rgba(255,255,255,.08);
   border-radius:16px;
-  border:1px solid rgba(255,255,255,.1);
+  padding:30px;
 }
-.card h3{color:#3ea6ff;margin-bottom:10px}
+.card h3{color:#38bdf8;margin-bottom:10px}
 .card p{color:#cbd5f5;font-size:16px}
 
-/* PROJELER */
-.projeler{
-  background:#020b2a;
-}
-.project{
-  padding:25px 0;
-  border-bottom:1px solid rgba(255,255,255,.1);
-}
-.project h4{font-size:22px;margin-bottom:8px}
-
-/* İLETİŞİM */
-.iletisim{
-  background:#020617;
-  text-align:center;
-}
-.iletisim h2{font-size:38px;margin-bottom:20px}
-.iletisim p{color:#cbd5f5;margin-bottom:40px}
-.contact{
-  display:flex;
-  justify-content:center;
-  gap:40px;
-  font-size:18px;
-  color:#3ea6ff;
-}
-
+/* FOOTER */
 footer{
-  padding:20px;
+  padding:30px;
   text-align:center;
   font-size:14px;
   color:#94a3b8;
+  border-top:1px solid rgba(255,255,255,.08);
 }
 </style>
 </head>
@@ -136,26 +107,10 @@ footer{
   <div class="container">
     <h1>Dijital Dönüşümde<br>Güvenilir Teknoloji Ortağınız</h1>
     <p>
-      RAN Teknoloji; işletmeler için yazılım, danışmanlık ve kurumsal IT çözümleri
-      geliştirerek dijital geleceği bugünden inşa eder.
+      RAN Teknoloji; yazılım, danışmanlık ve kurumsal IT çözümleriyle
+      işletmelerin dijital geleceğini inşa eder.
     </p>
-  </div>
-</section>
 
-<section class="kurumsal">
-  <div class="container">
-    <h2>Kurumsal Yaklaşımımız</h2>
-    <p>
-      Güven, sürdürülebilirlik ve yenilik temel değerlerimizdir.
-      Her projede iş ortağımızın ihtiyaçlarını analiz eder,
-      uzun vadeli ve ölçeklenebilir çözümler üretiriz.
-    </p>
-  </div>
-</section>
-
-<section class="faaliyet">
-  <div class="container">
-    <h2>Faaliyet Alanlarımız</h2>
     <div class="cards">
       <div class="card">
         <h3>Yazılım & Dijital</h3>
@@ -173,37 +128,9 @@ footer{
   </div>
 </section>
 
-<section class="projeler">
-  <div class="container">
-    <h2>Projelerimiz</h2>
-    <div class="project">
-      <h4>Kurumsal Web Platformu</h4>
-      <p>Yüksek performanslı ve güvenli web altyapısı.</p>
-    </div>
-    <div class="project">
-      <h4>Dijital Dönüşüm Sistemi</h4>
-      <p>İş süreçlerini uçtan uca dijitalleştiren çözümler.</p>
-    </div>
-    <div class="project">
-      <h4>Özel Yazılım Projesi</h4>
-      <p>Firmaya özel otomasyon ve entegrasyon yazılımları.</p>
-    </div>
-  </div>
-</section>
-
-<section class="iletisim">
-  <div class="container">
-    <h2>Bizimle İletişime Geçin</h2>
-    <p>Projeleriniz için yanınızdayız.</p>
-    <div class="contact">
-      <span>WhatsApp</span>
-      <span>Instagram</span>
-      <span>📞 05XX XXX XX XX</span>
-    </div>
-  </div>
-</section>
-
-<footer>© 2026 RAN Teknoloji</footer>
+<footer>
+  © 2026 RAN Teknoloji · WhatsApp · Instagram · 05XX XXX XX XX
+</footer>
 
 </body>
 </html>
