--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 body{
   font-family:'Inter',sans-serif;
   background:#020617;
-  color:#ffffff;
+  color:#fff;
 }
 
 /* HEADER */
 header{
   position:fixed;
   top:0;left:0;right:0;
-  padding:20px 50px;
+  padding:20px 60px;
   display:flex;
   justify-content:space-between;
   align-items:center;
@@ -31,7 +31,7 @@ header{
 header strong{color:#38bdf8;font-size:18px}
 nav a{
   margin-left:25px;
-  color:#ffffff;
+  color:#fff;
   text-decoration:none;
   font-size:15px;
 }
@@ -55,39 +55,80 @@ section{
   background:linear-gradient(135deg,#020617,#0b1d4a);
 }
 .hero h1{
-  font-size:54px;
+  font-size:56px;
   margin-bottom:20px;
 }
 .hero p{
   font-size:18px;
   color:#cbd5f5;
-  max-width:700px;
+  max-width:750px;
 }
 
-/* CARDS */
+/* SERVICES */
+.services{
+  background:#020617;
+}
 .cards{
-  margin-top:60px;
   display:grid;
   grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
   gap:30px;
+  margin-top:50px;
 }
 .card{
   background:rgba(255,255,255,.04);
   border:1px solid rgba(255,255,255,.08);
-  border-radius:16px;
-  padding:30px;
+  border-radius:18px;
+  padding:35px;
 }
-.card h3{color:#38bdf8;margin-bottom:10px}
-.card p{color:#cbd5f5;font-size:16px}
+.card h3{color:#38bdf8;margin-bottom:15px}
+.card p{color:#cbd5f5;font-size:16px;line-height:1.6}
+
+/* ABOUT */
+.about{
+  background:linear-gradient(135deg,#020617,#020617,#0b1d4a);
+}
+.about h2{
+  font-size:42px;
+  margin-bottom:20px;
+}
+.about p{
+  font-size:18px;
+  color:#cbd5f5;
+  max-width:900px;
+  line-height:1.8;
+}
+
+/* PROJECTS */
+.projects{
+  background:#020617;
+}
+.projects h2{
+  font-size:42px;
+  margin-bottom:40px;
+}
+.project-list{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(300px,1fr));
+  gap:30px;
+}
+.project{
+  padding:30px;
+  border-radius:16px;
+  background:rgba(255,255,255,.03);
+  border:1px solid rgba(255,255,255,.08);
+}
+.project h4{color:#38bdf8;margin-bottom:10px}
+.project p{color:#cbd5f5;font-size:15px}
 
 /* FOOTER */
 footer{
-  padding:30px;
+  padding:50px;
   text-align:center;
-  font-size:14px;
-  color:#94a3b8;
   border-top:1px solid rgba(255,255,255,.08);
+  background:#020617;
 }
+footer p{color:#94a3b8;font-size:14px}
+footer span{margin:0 15px;color:#38bdf8}
 </style>
 </head>
 
@@ -96,10 +137,10 @@ footer{
 <header>
   <strong>RAN TEKNOLOJİ</strong>
   <nav>
-    <a href="index.html">Ana Sayfa</a>
-    <a href="kurumsal.html">Kurumsal</a>
-    <a href="faaliyet.html">Faaliyet Alanları</a>
-    <a href="projeler.html">Projeler</a>
+    <a href="#">Ana Sayfa</a>
+    <a href="#">Kurumsal</a>
+    <a href="#">Faaliyet Alanları</a>
+    <a href="#">Projeler</a>
   </nav>
 </header>
 
@@ -108,28 +149,77 @@ footer{
     <h1>Dijital Dönüşümde<br>Güvenilir Teknoloji Ortağınız</h1>
     <p>
       RAN Teknoloji; yazılım, danışmanlık ve kurumsal IT çözümleriyle
-      işletmelerin dijital geleceğini inşa eder.
+      işletmelerin dijital geleceğini planlar, geliştirir ve yönetir.
     </p>
+  </div>
+</section>
 
+<section class="services">
+  <div class="container">
     <div class="cards">
       <div class="card">
         <h3>Yazılım & Dijital</h3>
-        <p>Web, mobil ve özel yazılım çözümleri.</p>
+        <p>
+          Web ve mobil uygulamalar, özel yazılım projeleri, kullanıcı deneyimi
+          odaklı modern dijital çözümler geliştiriyoruz.
+        </p>
       </div>
       <div class="card">
         <h3>Teknoloji Danışmanlığı</h3>
-        <p>Dijital dönüşüm ve BT stratejileri.</p>
+        <p>
+          Dijital dönüşüm, BT stratejileri, süreç analizi ve teknoloji yol
+          haritası oluşturma hizmetleri sunuyoruz.
+        </p>
       </div>
       <div class="card">
         <h3>Kurumsal IT</h3>
-        <p>Altyapı, entegrasyon ve sistem yönetimi.</p>
+        <p>
+          Altyapı kurulumu, sistem entegrasyonu, güvenlik ve kurumsal BT
+          yönetimi alanlarında uçtan uca destek sağlıyoruz.
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="about">
+  <div class="container">
+    <h2>Kurumsal Yaklaşımımız</h2>
+    <p>
+      RAN Teknoloji; sürdürülebilirlik, güvenilirlik ve yenilikçilik ilkeleriyle
+      hareket eder. İş ortaklarının ihtiyaçlarını analiz eder, doğru teknolojiyi
+      doğru stratejiyle birleştirerek uzun vadeli değer üretir.
+    </p>
+  </div>
+</section>
+
+<section class="projects">
+  <div class="container">
+    <h2>Projeler & Çözümler</h2>
+    <div class="project-list">
+      <div class="project">
+        <h4>Kurumsal Web Projeleri</h4>
+        <p>Marka kimliğine uygun, hızlı ve güvenli web çözümleri.</p>
+      </div>
+      <div class="project">
+        <h4>Dijital Dönüşüm</h4>
+        <p>İş süreçlerini teknolojiyle optimize eden projeler.</p>
+      </div>
+      <div class="project">
+        <h4>IT Altyapı Çözümleri</h4>
+        <p>Kurumsal sistem kurulumları ve entegrasyon projeleri.</p>
       </div>
     </div>
   </div>
 </section>
 
 <footer>
-  © 2026 RAN Teknoloji · WhatsApp · Instagram · 05XX XXX XX XX
+  <p>
+    © 2026 RAN Teknoloji
+    <span>WhatsApp</span>
+    <span>Instagram</span>
+    <span>05XX XXX XX XX</span>
+  </p>
 </footer>
 
 </body>
